--- a/interface/src/auth.html
+++ b/interface/src/auth.html
@@ -25,9 +25,11 @@
   <!-- endbuild -->
 </head>
 <body>
-<main class="auth-main">
-  <div class="auth-block">
-    <h1>Sign in to Blur Admin</h1>
+<main class="panel col-lg-6 col-lg-offset-3" style="margin-top: 20%">
+  <div class="panel-heading">
+    <div class="panel-title">Sign in to Blur Admin</div>
+  </div>
+  <div class="panel-body">
     <a href="reg.html" class="auth-link">New to Blur Admin? Sign up!</a>
 
     <form class="form-horizontal">
