--- a/interface/src/index.html
+++ b/interface/src/index.html
@@ -45,18 +45,6 @@
     </div>
   </div>
 
-  <footer class="al-footer clearfix">
-    <div class="al-footer-right">Created with <i class="ion-heart"></i></div>
-    <div class="al-footer-main clearfix">
-      <div class="al-copy">Blur Admin 2016</div>
-      <ul class="al-share clearfix">
-        <li><i class="socicon socicon-facebook"></i></li>
-        <li><i class="socicon socicon-twitter"></i></li>
-        <li><i class="socicon socicon-google"></i></li>
-        <li><i class="socicon socicon-github"></i></li>
-      </ul>
-    </div>
-  </footer>
 
   <back-top></back-top>
 </main>
@@ -65,10 +53,11 @@
   <div></div>
 </div>
 
-
-<main ng-show="$pageFinishedLoading && !$isLogged" class="auth-main">
-  <div class="auth-block">
-    <h1>Sign in to Blur Admin</h1>
+<main ng-show="$pageFinishedLoading && !$isLogged"class="panel col-lg-4 col-lg-offset-4" style="margin-top: 10%">
+  <div class="panel-heading">
+    <div class="panel-title">Sign in to Blur Admin</div>
+  </div>
+  <div class="panel-body">
     <a href="reg.html" class="auth-link">New to Blur Admin? Sign up!</a>
 
     <form class="form-horizontal">
@@ -88,21 +77,12 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default btn-auth">Sign in</button>
+          <button type="submit" class="btn btn-default">Sign in</button>
           <a href class="forgot-pass">Forgot password?</a>
         </div>
       </div>
     </form>
 
-    <div class="auth-sep"><span><span>or Sign in with one click</span></span></div>
-
-    <div class="al-share-auth">
-      <ul class="al-share clearfix">
-        <li><i class="socicon socicon-facebook" title="Share on Facebook"></i></li>
-        <li><i class="socicon socicon-twitter" title="Share on Twitter"></i></li>
-        <li><i class="socicon socicon-google" title="Share on Google Plus"></i></li>
-      </ul>
-    </div>
   </div>
 </main>
 
