--- a/interface/src/index.html
+++ b/interface/src/index.html
@@ -53,37 +53,8 @@
   <div></div>
 </div>
 
-<main ng-show="$pageFinishedLoading && !$isLogged"class="panel col-lg-4 col-lg-offset-4" style="margin-top: 10%">
-  <div class="panel-heading">
-    <div class="panel-title">Sign in to Blur Admin</div>
-  </div>
-  <div class="panel-body">
-    <a href="reg.html" class="auth-link">New to Blur Admin? Sign up!</a>
-
-    <form class="form-horizontal">
-      <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-
-        <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-
-        <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Sign in</button>
-          <a href class="forgot-pass">Forgot password?</a>
-        </div>
-      </div>
-    </form>
-
-  </div>
+<main ng-show="$pageFinishedLoading && !$isLogged"class="panel col-lg-4 col-lg-offset-4" style="margin-top: 10%" ng-controller="LoginCtrl">
+  <login-form></login-form>
 </main>
 
 <!-- build:js(src) scripts/vendor.js -->
